--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -2,12 +2,103 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Adrian Price-Whelan at 2017-12-12 08:53:04 -0500 
+%% Created for Adrian Price-Whelan at 2018-02-07 17:04:34 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Moe:2017,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2017ApJS..230...15M},
+	Archiveprefix = {arXiv},
+	Author = {{Moe}, M. and {Di Stefano}, R.},
+	Date-Added = {2018-02-07 22:04:32 +0000},
+	Date-Modified = {2018-02-07 22:04:33 +0000},
+	Doi = {10.3847/1538-4365/aa6fb6},
+	Eid = {15},
+	Eprint = {1606.05347},
+	Journal = {\apjs},
+	Keywords = {binaries: close, binaries: general, stars: evolution, stars: formation, stars: massive, stars: statistics},
+	Month = jun,
+	Pages = {15},
+	Primaryclass = {astro-ph.SR},
+	Title = {{Mind Your Ps and Qs: The Interrelation between Period (P) and Mass-ratio (Q) Distributions of Binary Stars}},
+	Volume = 230,
+	Year = 2017,
+	Bdsk-Url-1 = {https://dx.doi.org/10.3847/1538-4365/aa6fb6}}
+
+@article{Duchene:2013,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2013ARA%26A..51..269D},
+	Archiveprefix = {arXiv},
+	Author = {{Duch{\^e}ne}, G. and {Kraus}, A.},
+	Date-Added = {2018-02-07 22:00:19 +0000},
+	Date-Modified = {2018-02-07 22:00:21 +0000},
+	Doi = {10.1146/annurev-astro-081710-102602},
+	Eprint = {1303.3028},
+	Journal = {\araa},
+	Month = aug,
+	Pages = {269-310},
+	Primaryclass = {astro-ph.SR},
+	Title = {{Stellar Multiplicity}},
+	Volume = 51,
+	Year = 2013,
+	Bdsk-Url-1 = {https://dx.doi.org/10.1146/annurev-astro-081710-102602}}
+
+@article{Duquennoy:1991,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1991A%26AS...88..281D},
+	Author = {{Duquennoy}, A. and {Mayor}, M. and {Halbwachs}, J.-L.},
+	Date-Added = {2018-02-07 21:56:00 +0000},
+	Date-Modified = {2018-02-07 21:56:01 +0000},
+	Journal = {\aaps},
+	Keywords = {Binary Stars, Radial Velocity, Solar Neighborhood, Stellar Luminosity, Stellar Spectra, Astronomical Catalogs, Sky Surveys (Astronomy)},
+	Month = may,
+	Pages = {281-324},
+	Title = {{Multiplicity among solar type stars in the solar neighbourhood. I - CORAVEL radial velocity observations of 291 stars}},
+	Volume = 88,
+	Year = 1991}
+
+@article{Tokovinin:2014,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2014AJ....147...86T},
+	Archiveprefix = {arXiv},
+	Author = {{Tokovinin}, A.},
+	Date-Added = {2018-02-07 21:53:56 +0000},
+	Date-Modified = {2018-02-07 21:53:58 +0000},
+	Doi = {10.1088/0004-6256/147/4/86},
+	Eid = {86},
+	Eprint = {1401.6825},
+	Journal = {\aj},
+	Keywords = {binaries: general, stars: solar-type, stars: statistics},
+	Month = apr,
+	Pages = {86},
+	Primaryclass = {astro-ph.SR},
+	Title = {{From Binaries to Multiples. I. Data on F and G Dwarfs within 67 pc of the Sun}},
+	Volume = 147,
+	Year = 2014,
+	Bdsk-Url-1 = {https://dx.doi.org/10.1088/0004-6256/147/4/86}}
+
+@article{Raghavan:2010,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2010ApJS..190....1R},
+	Archiveprefix = {arXiv},
+	Author = {{Raghavan}, D. and {McAlister}, H.~A. and {Henry}, T.~J. and {Latham}, D.~W. and {Marcy}, G.~W. and {Mason}, B.~D. and {Gies}, D.~R. and {White}, R.~J. and {ten Brummelaar}, T.~A.},
+	Date-Added = {2018-02-07 21:52:11 +0000},
+	Date-Modified = {2018-02-07 21:52:13 +0000},
+	Doi = {10.1088/0067-0049/190/1/1},
+	Eprint = {1007.0414},
+	Journal = {\apjs},
+	Keywords = {binaries: general, planetary systems, stars: solar-type, stars: statistics, surveys},
+	Month = sep,
+	Pages = {1-42},
+	Primaryclass = {astro-ph.SR},
+	Title = {{A Survey of Stellar Families: Multiplicity of Solar-type Stars}},
+	Volume = 190,
+	Year = 2010,
+	Bdsk-Url-1 = {https://dx.doi.org/10.1088/0067-0049/190/1/1}}
 
 @article{Badenes:2017,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
