--- a/notebooks/How period modes depend on number of epochs.ipynb
+++ b/notebooks/How period modes depend on number of epochs.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 4\n",
+    "N = 8\n",
     "\n",
     "# t = np.random.uniform(t0.mjd, (t0 + baseline).mjd, size=N)\n",
     "\n",
@@ -74,7 +74,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "joker = TheJoker(pars)"
@@ -88,7 +90,7 @@
    },
    "outputs": [],
    "source": [
-    "samples = joker.iterative_rejection_sample(data, n_requested_samples=1000, \n",
+    "samples = joker.iterative_rejection_sample(data, n_requested_samples=100, \n",
     "                                           n_prior_samples=1000000)"
    ]
   },
@@ -108,7 +110,19 @@
    "outputs": [],
    "source": [
     "logP = np.log(samples['P'].to(u.day).value)\n",
-    "X = logP.reshape(-1, 1)"
+    "plt.scatter(logP, samples['e'], alpha=0.25, marker='.')\n",
+    "plt.axvline(np.log(orb.P.to(u.day).value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from scipy.stats import scoreatpercentile"
    ]
   },
   {
@@ -117,8 +131,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(logP, samples['e'], alpha=0.25, marker='.')"
+    "pers = scoreatpercentile(logP, [5, 10, 50, 90, 95])\n",
+    "pers[1]-pers[0], pers[4]-pers[3]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pers - np.log(orb.P.to(u.day).value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
