rename and rescope

--- a/notebooks/figures/Numbers of visits and sample overview.ipynb
+++ b/notebooks/figures/Numbers of visits and sample overview.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from os import path\n",
@@ -39,6 +41,15 @@
     "\n",
     "print(\"{0} unique stars in APOGEE DR14\".format(len(np.unique(allstar['APOGEE_ID']))))\n",
     "print(\"{0} visits in APOGEE DR14\".format(len(allvisit)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(allstar['NVISITS'] == 1).sum(), (allstar['NVISITS'] > 1).sum()"
    ]
   },
   {
@@ -137,39 +148,31 @@
     "mask3 = (allvisit['STARFLAG'] & skip_mask) == 0\n",
     "print('mask 3: removes {0} more'.format((np.logical_not(mask3) & mask2 & mask1).sum()))\n",
     "\n",
-    "# Remove STAR_BAD stars:\n",
-    "apogee_ids = allstar['APOGEE_ID'][(allstar['ASPCAPFLAG'] & np.sum(2 ** np.array([23]))) == 0]\n",
+    "# Remove STAR_BAD stars and restrict logg range:\n",
+    "apogee_ids = allstar['APOGEE_ID'][((allstar['ASPCAPFLAG'] & np.sum(2 ** np.array([23]))) == 0) & \n",
+    "                                  (allstar['LOGG'] > 0) & (allstar['LOGG'] < 3.5)]\n",
     "print('(star cut removes {0} stars)'.format(len(allstar)-len(apogee_ids)))\n",
     "mask4 = np.isin(allvisit['APOGEE_ID'], apogee_ids)\n",
     "print('mask 4: removes {0} more'.format((np.logical_not(mask4) & mask3 & mask2 & mask1).sum()))\n",
+    "\n",
     "print('\\n total removed: {0}'.format(np.logical_not(mask4 & mask3 & mask2 & mask1).sum()))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tmp_visits = allvisit[mask1 & mask2 & mask3 & mask4]\n",
     "\n",
     "v_apogee_ids, counts = np.unique(tmp_visits['APOGEE_ID'], return_counts=True)\n",
     "stars = allstar[np.isin(allstar['APOGEE_ID'], v_apogee_ids[counts >= 3])]\n",
-    "print(len(stars))\n",
+    "print(len(np.unique(stars['APOGEE_ID'])))\n",
     "\n",
-    "visits = tmp_visits[np.isin(tmp_visits['APOGEE_ID'], stars['APOGEE_ID'])]"
+    "visits = tmp_visits[np.isin(tmp_visits['APOGEE_ID'], stars['APOGEE_ID'])]\n",
+    "print(len(visits))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -183,9 +186,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:twoface-new]",
+   "display_name": "Python [conda env:twoface]",
    "language": "python",
-   "name": "conda-env-twoface-new-py"
+   "name": "conda-env-twoface-py"
   },
   "language_info": {
    "codemirror_mode": {
