--- a/notebooks/figures/Numbers of visits and sample overview.ipynb
+++ b/notebooks/figures/Numbers of visits and sample overview.ipynb
@@ -102,8 +102,8 @@
     "ax.set_xlim(3, 128)\n",
     "\n",
     "ax.xaxis.set_ticks(2**np.arange(2, 7+1, 1))\n",
-    "ax.set_xlabel('number of visits')\n",
-    "ax.set_ylabel('number of stars')\n",
+    "ax.set_xlabel('$N$ visits')\n",
+    "ax.set_ylabel('$N$ stars')\n",
     "\n",
     "fig.tight_layout()\n",
     "fig.savefig(str(FIGURES_PATH1 / 'nvisits.pdf'), rasterized=True, dpi=250)"
@@ -116,6 +116,56 @@
    "outputs": [],
    "source": [
     "(nvisits < 8).sum() / len(nvisits)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "logg - Teff and metallicity of sample:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = np.array(session.query(AllStar.logg, AllStar.teff, AllStar.fe_h).all())\n",
+    "logg,teff,feh = res.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 2, figsize=(10, 4.5))\n",
+    "\n",
+    "axes[0].hist(feh, bins=np.linspace(-3, 1, 64), rasterized=True);\n",
+    "axes[0].set_yscale('log')\n",
+    "axes[0].set_xlabel(r'[Fe/H]')\n",
+    "axes[0].set_ylabel(r'$N$')\n",
+    "\n",
+    "c = axes[1].scatter(teff, logg, c=feh, marker='.', alpha=0.2, \n",
+    "                    linewidth=0, vmin=-1, vmax=0.75, \n",
+    "                    cmap='RdYlBu_r', s=8, rasterized=True)\n",
+    "axes[1].set_xlim(6000, 3500)\n",
+    "axes[1].set_ylim(4.5, -0.5)\n",
+    "axes[1].set_xlabel(r'$T_{\\rm eff}$ [K]')\n",
+    "axes[1].set_ylabel(r'$\\log g$')\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "fig.subplots_adjust(right=0.82)\n",
+    "\n",
+    "cax = fig.add_axes([0.85, 0.185, 0.02, 0.78])\n",
+    "cb = fig.colorbar(c, cax=cax, drawedges=False)\n",
+    "cb.set_label('[Fe/H]')\n",
+    "cb.solids.set_edgecolor(\"face\")\n",
+    "cb.solids.set_rasterized(True) \n",
+    "\n",
+    "fig.savefig(str(FIGURES_PATH1 / 'logg_teff_feh.pdf'), rasterized=True, dpi=250)"
    ]
   },
   {
@@ -150,7 +200,7 @@
     "\n",
     "# Remove STAR_BAD stars and restrict logg range:\n",
     "apogee_ids = allstar['APOGEE_ID'][((allstar['ASPCAPFLAG'] & np.sum(2 ** np.array([23]))) == 0) & \n",
-    "                                  (allstar['LOGG'] > 0) & (allstar['LOGG'] < 3.5)]\n",
+    "                                  (allstar['LOGG'] > 0) & (allstar['LOGG'] < 4)]\n",
     "print('(star cut removes {0} stars)'.format(len(allstar)-len(apogee_ids)))\n",
     "mask4 = np.isin(allvisit['APOGEE_ID'], apogee_ids)\n",
     "print('mask 4: removes {0} more'.format((np.logical_not(mask4) & mask3 & mask2 & mask1).sum()))\n",
