--- a/notebooks/Sample properties.ipynb
+++ b/notebooks/Sample properties.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -66,16 +64,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# stars = session.query(AllStar).join(StarResult, JokerRun, Status)\\\n",
-    "#                .filter(JokerRun.name == 'apogee-jitter')\\\n",
-    "#                .filter(Status.id == 2).all()\n",
-    "\n",
-    "# logg cut removes large jitter stars\n",
     "stars = session.query(AllStar).join(StarResult, Status, AllVisitToAllStar, AllVisit)\\\n",
     "                              .filter(Status.id > 0)\\\n",
-    "                              .filter(AllStar.logg > 2)\\\n",
+    "                              .filter(AllStar.logg > 0)\\\n",
     "                              .group_by(AllStar.apstar_id)\\\n",
-    "                              .having(func.count(AllVisit.id) >= 10)\\\n",
+    "                              .having(func.count(AllVisit.id) >= 12)\\\n",
     "                              .all()\n",
     "len(stars)"
    ]
@@ -91,32 +84,19 @@
     "rows = None\n",
     "with h5py.File(samples_file, 'r') as f:\n",
     "    for star in stars:\n",
-    "        data = star.apogeervdata()\n",
     "        samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
+    "        loggs = [star.logg] * len(samples)\n",
     "        \n",
-    "        chi2s = []\n",
-    "        for j in range(len(samples)):\n",
-    "            orbit = samples.get_orbit(j)\n",
-    "            chi2 = np.sum( ((data.rv - orbit.radial_velocity(data.t)) / data.stddev)**2 ).value\n",
-    "            chi2s.append(chi2)\n",
-    "            \n",
-    "        orbit = samples.get_orbit(np.argmin(chi2s))\n",
-    "        \n",
-    "        resid = (data.rv - orbit.radial_velocity(data.t)).to(u.km/u.s).value\n",
-    "        norm_resid = ((data.rv - orbit.radial_velocity(data.t)) / data.stddev).decompose().value\n",
-    "        plate = [int(v.plate) for v in star.visits]\n",
-    "        fiber = [int(v.fiberid) for v in star.visits]\n",
-    "        mjd = [int(v.mjd) for v in star.visits]\n",
+    "        this_rows = list(zip(loggs, \n",
+    "                             samples['P'].to(u.day).value,\n",
+    "                             samples['e'].value))\n",
     "        \n",
     "        if rows is None:\n",
-    "            rows = list(zip(plate, fiber, mjd, resid, norm_resid))\n",
-    "        \n",
+    "            rows = this_rows\n",
     "        else:\n",
-    "            these_rows = list(zip(plate, fiber, mjd, resid, norm_resid))\n",
-    "            rows = rows + these_rows\n",
+    "            rows = rows + this_rows\n",
     "            \n",
-    "tbl = np.array(rows, dtype=[('plate', int), ('fiber', int), ('mjd', int), \n",
-    "                            ('resid', float), ('norm_resid', float)])"
+    "tbl = np.array(rows, dtype=[('logg', float), ('P', float), ('e', float)])"
    ]
   },
   {
@@ -125,27 +105,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axes = plt.subplots(3, 1, figsize=(12, 12), sharey=True)\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
+    "ax.plot(tbl['P'], tbl['logg'], marker='.', \n",
+    "        linestyle='none', alpha=0.1, ms=2)\n",
     "\n",
-    "style = dict(marker='.', linestyle='none', alpha=0.25, ms=3)\n",
-    "axes[0].plot(tbl['plate'], tbl['resid'], **style)\n",
-    "axes[0].set_xlabel('PLATEID')\n",
+    "# -- P curves --\n",
+    "logg = np.linspace(0, 4, 1024)\n",
+    "g = 10**logg * u.cm/u.s**2\n",
     "\n",
-    "axes[1].plot(tbl['fiber'], tbl['resid'], **style)\n",
-    "axes[1].set_xlabel('FIBERID')\n",
-    "axes[1].set_ylabel('Residual [{0:latex_inline}]'.format(u.km/u.s))\n",
+    "for M1 in [0.5, 1., 2] * u.Msun:\n",
+    "    R = np.sqrt(G * M1 / g).to(u.au)\n",
     "\n",
-    "axes[2].plot(tbl['mjd'], tbl['resid'], **style)\n",
-    "axes[2].set_xlabel('MJD')\n",
+    "    P = (2*np.pi * np.sqrt(R**3 / (G * M1))).to(u.day).value\n",
+    "    ax.plot(P, logg, marker='', \n",
+    "            label='{0:.1f} {1:latex_inline}'.format(M1.value, M1.unit))\n",
     "\n",
-    "axes[0].set_yscale('symlog', linthreshy=1E-1)\n",
-    "axes[0].set_ylim(-100, 100)\n",
-    "\n",
-    "for ax in axes:\n",
-    "    ax.axhline(1., zorder=-10, alpha=0.5, color='tab:orange', linestyle='--', linewidth=1.)\n",
-    "    ax.axhline(-1., zorder=-10, alpha=0.5, color='tab:orange', linestyle='--', linewidth=1.)\n",
-    "    ax.axhspan(-0.1, 0.1, zorder=-10, color='#eeeeee')\n",
-    "\n",
+    "ax.legend(loc='upper right')\n",
+    "    \n",
+    "ax.set_xscale('log')\n",
+    "ax.set_xlim(1, 32768)\n",
+    "ax.set_ylim(3.55, 0)\n",
+    "ax.set_xlabel('$P$ [day]')\n",
+    "ax.set_ylabel('$\\log g$')\n",
+    "    \n",
     "fig.tight_layout()"
    ]
   },
@@ -155,27 +137,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 1, figsize=(12, 4.5), sharey=True)\n",
-    "\n",
-    "style = dict(marker='.', linestyle='none', alpha=0.5, ms=3)\n",
-    "ax.plot(tbl['fiber'], np.abs(tbl['resid']), **style)\n",
-    "ax.set_xlabel('FIBERID')\n",
-    "ax.set_ylabel('abs(residual) [{0:latex_inline}]'.format(u.km/u.s))\n",
-    "ax.set_yscale('log')\n",
-    "ax.set_ylim(0.1, 100)\n",
-    "\n",
-    "fig.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from scipy.stats import norm"
+    "stars2 = session.query(AllStar).join(StarResult, Status)\\\n",
+    "                               .filter(Status.id == 2).all()\n",
+    "len(stars2)"
    ]
   },
   {
@@ -184,14 +148,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(tbl['resid'].ravel(), bins=np.linspace(-10, 10, 256), normed=True);\n",
+    "%%time\n",
     "\n",
-    "r_grid = np.linspace(-10, 10, 1024)\n",
-    "plt.plot(r_grid, norm.pdf(r_grid, 0, 0.15), marker='')\n",
+    "rows = None\n",
+    "with h5py.File(samples_file, 'r') as f:\n",
+    "    for star in stars2:\n",
+    "        samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
+    "        loggs = [star.logg] * len(samples)\n",
+    "        \n",
+    "        this_rows = list(zip(loggs, \n",
+    "                             samples['P'].to(u.day).value,\n",
+    "                             samples['e'].value))\n",
+    "        \n",
+    "        if rows is None:\n",
+    "            rows = this_rows\n",
+    "        else:\n",
+    "            rows = rows + this_rows\n",
+    "            \n",
+    "tbl2 = np.array(rows, dtype=[('logg', float), ('P', float), ('e', float)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
+    "ax.plot(tbl2['P'], tbl2['logg'], marker='.', \n",
+    "        linestyle='none', alpha=0.4, ms=6)\n",
     "\n",
-    "plt.yscale('log')\n",
-    "plt.ylim(1E-4, 1E1)\n",
-    "plt.xlabel('residual [{0:latex_inline}]'.format(u.km/u.s))"
+    "# -- P curves --\n",
+    "logg = np.linspace(0, 4, 1024)\n",
+    "g = 10**logg * u.cm/u.s**2\n",
+    "\n",
+    "for M1 in [0.5, 1., 2] * u.Msun:\n",
+    "    R = np.sqrt(G * M1 / g).to(u.au)\n",
+    "\n",
+    "    P = (2*np.pi * np.sqrt(R**3 / (G * M1))).to(u.day).value\n",
+    "    ax.plot(P, logg, marker='', \n",
+    "            label='{0:.1f} {1:latex_inline}'.format(M1.value, M1.unit))\n",
+    "\n",
+    "ax.legend(loc='upper right')\n",
+    "    \n",
+    "ax.set_xscale('log')\n",
+    "ax.set_xlim(1, 32768)\n",
+    "ax.set_ylim(3.55, 0)\n",
+    "ax.set_xlabel('$P$ [day]')\n",
+    "ax.set_ylabel('$\\log g$')\n",
+    "    \n",
+    "fig.tight_layout()"
    ]
   },
   {
