--- a/notebooks/Debug MCMC continue.ipynb
+++ b/notebooks/Debug MCMC continue.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -15,6 +13,7 @@
     "import astropy.units as u\n",
     "from astropy.table import Table\n",
     "from astropy.constants import G\n",
+    "from astropy.stats import median_absolute_deviation\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -23,8 +22,8 @@
     "import h5py\n",
     "import schwimmbad\n",
     "\n",
-    "from thejoker import JokerSamples\n",
-    "from thejoker.sampler import JokerParams, TheJoker\n",
+    "from thejoker import JokerSamples, JokerParams, TheJoker\n",
+    "from thejoker.sampler.mcmc import TheJokerMCMCModel\n",
     "from thejoker.plot import plot_rv_curves\n",
     "\n",
     "from twoface.config import TWOFACE_CACHE_PATH\n",
@@ -38,9 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "samples_file = path.join(TWOFACE_CACHE_PATH, 'apogee-jitter.hdf5')"
@@ -49,9 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Session, _ = db_connect(path.join(TWOFACE_CACHE_PATH, 'apogee.sqlite'))\n",
@@ -87,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "star = stars[0]\n",
+    "star = stars[1]\n",
     "\n",
     "data = star.apogeervdata()\n",
     "with h5py.File(samples_file) as f:\n",
@@ -119,23 +114,19 @@
    "source": [
     "ndim = sampler.chain.shape[-1]\n",
     "\n",
-    "fig, axes = plt.subplots(ndim, 2, figsize=(10, 16))\n",
+    "fig, axes = plt.subplots(ndim, 3, figsize=(12, 16))\n",
     "for k in range(ndim):\n",
     "    for walker in sampler.chain[..., k]:\n",
     "        axes[k, 0].plot(walker, marker='', drawstyle='steps-mid', alpha=0.1)\n",
     "        \n",
-    "    axes[k, 1].plot(np.std(sampler.chain[..., k], axis=0),\n",
-    "                    marker='', drawstyle='steps-mid')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_ = plot_data_orbits(data, samples0, xlim_choice='tight')\n",
-    "_ = plot_data_orbits(data, samples, xlim_choice='tight', highlight_P_extrema=False)"
+    "    axes[k, 1].plot(np.median(sampler.chain[..., k], axis=0),\n",
+    "                    marker='', drawstyle='steps-mid')\n",
+    "    \n",
+    "    # std = np.std(sampler.chain[..., k], axis=0)\n",
+    "    std = 1.5 * median_absolute_deviation(sampler.chain[..., k], axis=0)\n",
+    "    axes[k, 2].plot(std, marker='', drawstyle='steps-mid')\n",
+    "    \n",
+    "fig.tight_layout()"
    ]
   },
   {
@@ -164,38 +155,112 @@
    },
    "outputs": [],
    "source": [
-    "for star in stars2:\n",
-    "    with h5py.File(samples_file) as f:\n",
-    "        samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
+    "_ = plot_data_orbits(data, samples0, xlim_choice='tight')\n",
+    "_ = plot_data_orbits(data, samples, xlim_choice='tight', highlight_P_extrema=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import astropy.units as u\n",
+    "from astropy.stats import median_absolute_deviation\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "import glob\n",
+    "import pickle\n",
+    "from os import path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "names = [r'$\\ln P$', r'$\\sqrt{K}\\,\\cos M_0$', r'$\\sqrt{K}\\,\\sin M_0$', \n",
+    "         r'$\\sqrt{e}\\,\\cos \\omega$', r'$\\sqrt{e}\\,\\sin \\omega$', \n",
+    "         r'$\\ln s^2$', '$v_0$']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for filename in glob.glob('../scripts/test-mcmc-*.pickle'):\n",
+    "    with open(filename, 'rb') as f:\n",
+    "        sampler = pickle.load(f)\n",
     "\n",
-    "    # compute minimum companion mass\n",
-    "    if star.martig_filter:\n",
-    "        m2_mins = []\n",
-    "        for i in range(len(samples)):\n",
-    "            orbit = samples.get_orbit(i)\n",
-    "            res = root(m2_func, x0=10, args=(star.martig_mass, 1., orbit.m_f.value))\n",
-    "            m2_mins.append(res.x[0])\n",
-    "        m2_mins = m2_mins*u.Msun\n",
-    "        # print('m1 = {0:.3f}'.format(star.martig_mass*u.Msun))\n",
-    "        # print('m2 = {0:.3f}, {1:.2f}'.format(np.mean(m2_mins), np.mean(m2_mins).to(u.Mjup)))\n",
-    "        m1 = star.martig_mass*u.Msun\n",
-    "        m2 = np.mean(m2_mins)\n",
+    "    ndim = sampler.chain.shape[-1]\n",
     "\n",
-    "    else:\n",
-    "        m1 = None\n",
-    "        m2 = None\n",
+    "    fig, axes = plt.subplots(ndim, 3, figsize=(12, 16))\n",
+    "    for k in range(ndim):\n",
+    "        axes[k, 0].set_ylabel(names[k])\n",
+    "        axes[k, 0].plot(sampler.chain[..., k].T, marker='', drawstyle='steps-mid', \n",
+    "                        alpha=0.1, rasterized=True)\n",
+    "        axes[k, 1].plot(np.median(sampler.chain[..., k], axis=0),\n",
+    "                        marker='', drawstyle='steps-mid')\n",
     "\n",
-    "    # acceleration percentile\n",
-    "    acc = acc_per[all_apogee_ids == star.apogee_id][0] * K_unit/P_unit\n",
+    "        # std = np.std(sampler.chain[..., k], axis=0)\n",
+    "        std = 1.5 * median_absolute_deviation(sampler.chain[..., k], axis=0)\n",
+    "        axes[k, 2].plot(std, marker='', drawstyle='steps-mid')\n",
     "\n",
-    "    fig = make_two_panel(star, m1=m1, m2=m2, acc=acc)\n",
-    "    fig.savefig('../plots/needs-mcmc/{0}-2panel.png'.format(star.apogee_id), dpi=200)\n",
-    "    \n",
-    "    fig = make_phase_fold(star)\n",
-    "    fig.savefig('../plots/needs-mcmc/{0}-residual.png'.format(star.apogee_id), dpi=200)\n",
-    "    \n",
+    "    axes[0, 0].set_title('walkers')\n",
+    "    axes[0, 1].set_title('med(walkers)')\n",
+    "    axes[0, 2].set_title('1.5 MAD(walkers)')\n",
+    "\n",
+    "    fig.tight_layout()\n",
+    "    fig.savefig('../scripts/{0}.png'.format(path.splitext(path.basename(filename))[0]), dpi=250)\n",
     "    plt.close('all')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for filename in glob.glob('../scripts/test-mcmc-*.pickle'):\n",
+    "    *_, apogee_id = path.splitext(filename)[0].split('-')\n",
+    "    star = session.query(AllStar).filter(AllStar.apogee_id == apogee_id).limit(1).one()\n",
+    "    data = star.apogeervdata()\n",
+    "    model = TheJokerMCMCModel(joker_params=params, data=data)\n",
+    "    \n",
+    "    with open(filename, 'rb') as f:\n",
+    "        sampler = pickle.load(f)\n",
+    "    \n",
+    "    samples = model.unpack_samples_mcmc(sampler.chain[:, -1])\n",
+    "    samples.t0 = Time(data._t0_bmjd, format='mjd', scale='tcb')\n",
+    "    \n",
+    "    fig = plot_data_orbits(data, samples, n_orbits=256)\n",
+    "    fig.savefig('../scripts/{0}-samples.png'.format(apogee_id), dpi=260)\n",
+    "    plt.close('all')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -233,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
