--- a/notebooks/apogee-jitter results.ipynb
+++ b/notebooks/apogee-jitter results.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -65,7 +63,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -920,9 +917,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:twoface-new]",
+   "display_name": "Python [conda env:twoface]",
    "language": "python",
-   "name": "conda-env-twoface-new-py"
+   "name": "conda-env-twoface-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -934,7 +931,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
