apogee jitter results

--- a/notebooks/apogee-jitter results.ipynb
+++ b/notebooks/apogee-jitter results.ipynb
@@ -19,6 +19,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
+    "from matplotlib.gridspec import GridSpec\n",
     "import h5py\n",
     "from sqlalchemy import func\n",
     "from scipy.optimize import root\n",
@@ -34,7 +35,8 @@
     "                        StarResult, Status, JokerRun, initialize_db)\n",
     "from twoface.data import APOGEERVData\n",
     "from twoface.plot import plot_data_orbits\n",
-    "from twoface.mass import m2_func"
+    "from twoface.mass import m2_func\n",
+    "from twoface.samples_analysis import unimodal_P"
    ]
   },
   {
@@ -45,7 +47,6 @@
    },
    "outputs": [],
    "source": [
-    "TWOFACE_CACHE_PATH = path.abspath('../cache/')\n",
     "samples_file = path.join(TWOFACE_CACHE_PATH, 'apogee-jitter.hdf5')"
    ]
   },
@@ -65,7 +66,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -76,6 +76,87 @@
     "               .join(StarResult, JokerRun, Status)\\\n",
     "               .filter(Status.id == i).count()\n",
     "    print(\"Status: {0} ({1}) - {2}\".format(status.message, status.id, n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "n_samples, = session.query(JokerRun.requested_samples_per_star).filter(JokerRun.name == 'apogee-jitter').one()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compute acceleration metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "all_acc = None\n",
+    "all_apogee_ids = []\n",
+    "with h5py.File(samples_file) as f:\n",
+    "    for i, key in enumerate(f):\n",
+    "        if all_acc is None:\n",
+    "            all_acc = np.full((len(f), n_samples), np.nan)\n",
+    "            K_unit = u.Unit(f[key]['K'].attrs['unit'])\n",
+    "            P_unit = u.Unit(f[key]['P'].attrs['unit'])\n",
+    "        \n",
+    "        _n = len(f[key]['K'][:])\n",
+    "        all_acc[i, :_n] = f[key]['K'][:] / f[key]['P'][:]\n",
+    "        all_apogee_ids.append(key)\n",
+    "        \n",
+    "all_acc = all_acc * K_unit / P_unit\n",
+    "all_apogee_ids = np.array(all_apogee_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "acc_per = np.nanpercentile(all_acc, 10, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1)\n",
+    "\n",
+    "ax.hist(acc_per, \n",
+    "        bins=np.logspace(-6, 2, 64));\n",
+    "ax.set_xscale('log')\n",
+    "ax.set_yscale('log')\n",
+    "\n",
+    "ax.set_xlabel('$K / P$ [{0:latex_inline}]'.format(K_unit/P_unit))\n",
+    "ax.set_ylabel('$N$')\n",
+    "ax.set_title('10th percentile acc.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[(x, (acc_per > x).sum()) for x in 10**np.arange(-3, 1+0.1, 0.5)]"
    ]
   },
   {
@@ -93,112 +174,77 @@
    },
    "outputs": [],
    "source": [
-    "apogee_id = '2M17533701-2525544'\n",
-    "\n",
-    "with h5py.File(samples_file) as f:\n",
-    "    samples = JokerSamples.from_hdf5(f[apogee_id])\n",
+    "def make_two_panel(star, m1=None, m2=None, acc=None, \n",
+    "                   clean=False, **plot_data_orbits_kw):\n",
+    "    data = star.apogeervdata(clean=clean)\n",
     "    \n",
-    "print(len(samples))\n",
-    "    \n",
-    "star = session.query(AllStar).filter(AllStar.apogee_id == apogee_id).limit(1).one()\n",
-    "data = star.apogeervdata(clean=True)\n",
-    "fig = plot_data_orbits(data, samples, xlim_choice='tight')\n",
-    "fig.axes[0].set_title('{0}: {1}'.format(apogee_id, star.results[0].status.message))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Stars that need more samples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# needs more samples\n",
-    "stars1 = session.query(AllStar).join(StarResult, JokerRun, Status)\\\n",
-    "                .filter(JokerRun.name == 'apogee-jitter')\\\n",
-    "                .filter((AllStar.logg < 3.5) & (AllStar.logg > -9999))\\\n",
-    "                .filter(Status.id == 1).all() # only look at RGB for now\n",
-    "\n",
-    "# needs mcmc\n",
-    "stars2 = session.query(AllStar).join(StarResult, JokerRun, Status)\\\n",
-    "                .filter(JokerRun.name == 'apogee-jitter')\\\n",
-    "                .filter((AllStar.logg < 3.5) & (AllStar.logg > -9999))\\\n",
-    "                .filter(Status.id == 2).all() # only look at RGB for now"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "len(stars1), len(stars2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "for i, star in enumerate(stars1[28:38]):\n",
     "    with h5py.File(samples_file) as f:\n",
     "        samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
     "\n",
-    "    data = star.apogeervdata(clean=True)\n",
-    "    fig = plot_data_orbits(data, samples, xlim_choice='tight')\n",
-    "    fig.axes[0].set_title('{0} index: {1}'.format(star.results[0].status.message, i))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "chisqs = []\n",
-    "for star in stars2:\n",
-    "    data = star.apogeervdata(clean=True)\n",
+    "    # plot\n",
+    "    fig = plt.figure(figsize=(15, 5))\n",
+    "    gs = GridSpec(1, 3)\n",
+    "    ax1 = fig.add_subplot(gs[:2])\n",
+    "    ax2 = fig.add_subplot(gs[2])\n",
     "    \n",
-    "    with h5py.File(samples_file, mode='r') as f:\n",
+    "    plot_data_orbits_kw['xlim_choice'] = plot_data_orbits_kw.get('xlim_choice', 'tight')\n",
+    "    fig = plot_data_orbits(data, samples, ax=ax1,\n",
+    "                           **plot_data_orbits_kw)\n",
+    "    # ax1.set_title(star.results[0].status.message)\n",
+    "    \n",
+    "    if acc is not None:\n",
+    "        title = 'acc = {0:.3f} {1:latex_inline}'.format(acc.value, acc.unit)\n",
+    "    else:\n",
+    "        title = ''\n",
+    "        \n",
+    "    if m1 is not None:\n",
+    "        title = title + ', $m_1 = ${0:.2f} {1:latex_inline}'.format(m1.value, m1.unit)\n",
+    "        if m2 > 15*u.Mjup:\n",
+    "            title = title + ', $m_2 = ${0:.2f} {1:latex_inline}'.format(m2.value, m2.unit)\n",
+    "        else:\n",
+    "            title = title + ', $m_2 = ${0:.2f} {1:latex_inline}'.format(m2.to(u.Mjup).value, u.Mjup)\n",
+    "            \n",
+    "    ax1.set_title(title, fontsize=20)\n",
+    "\n",
+    "    ax2.scatter(samples['P'], samples['e'], marker='.', alpha=0.5)\n",
+    "    ax2.set_xscale('log', basex=2)\n",
+    "    ax2.set_xlim(0.5, 2**15)\n",
+    "    ax2.set_ylim(0, 1)\n",
+    "    ax2.xaxis.set_ticks(2**np.arange(0, 15+1, 3));\n",
+    "    ax2.set_title(star.apogee_id, fontsize=20)\n",
+    "    \n",
+    "    return fig\n",
+    "\n",
+    "def make_phase_fold(star, clean=False):\n",
+    "    data = star.apogeervdata(clean=clean)\n",
+    "    \n",
+    "    with h5py.File(samples_file) as f:\n",
     "        samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
+    "        \n",
+    "    if not unimodal_P(samples, data):\n",
+    "        raise ValueError('multi-modal period distribution')\n",
     "    \n",
     "    orbit = samples.get_orbit(0)\n",
     "    M0 = samples['M0'][0]\n",
     "    P = samples['P'][0]\n",
+    "    s = samples['jitter'][0]\n",
     "    t0 = data.t0 + (P/(2*np.pi)*M0).to(u.day, u.dimensionless_angles())\n",
     "    phase = data.phase(P=P, t0=t0)\n",
     "    \n",
-    "    err = np.sqrt(data.stddev**2 + samples['jitter'][0]**2).to(u.km/u.s)\n",
-    "    \n",
     "    # compute chi^2 of the orbit fit\n",
     "    residual = data.rv - orbit.radial_velocity(data.t)\n",
-    "    chisq = residual**2 / err**2\n",
-    "    chisq = np.sum(chisq.decompose())\n",
-    "    chisqs.append(chisq)\n",
+    "    err = np.sqrt(data.stddev**2 + s**2)\n",
+    "    chisq = np.sum((residual**2 / err**2).decompose())\n",
     "    \n",
     "    # plot the phase-folded data and orbit\n",
     "    fig, axes = plt.subplots(1, 2, figsize=(10, 5), sharex=True)\n",
     "    \n",
     "    ax = axes[0]\n",
-    "    ax.errorbar(phase, data.rv.to(u.km/u.s).value, err.value, \n",
-    "                linestyle='none', marker='.', color='k')\n",
+    "    ax.errorbar(phase, data.rv.to(u.km/u.s).value, data.stddev.to(u.km/u.s).value, \n",
+    "                linestyle='none', marker='o', color='k', markersize=5)\n",
+    "    ax.errorbar(phase, data.rv.to(u.km/u.s).value, s.to(u.km/u.s).value, \n",
+    "                linestyle='none', marker='', color='k', \n",
+    "                alpha=0.4, zorder=-10)\n",
     "    \n",
     "    phase_grid = np.linspace(0,1,1024)\n",
     "    ax.plot(phase_grid, orbit.radial_velocity(t0 + phase_grid*P), \n",
@@ -210,17 +256,55 @@
     "    \n",
     "    ax = axes[1]\n",
     "    \n",
-    "    ax.errorbar(phase, residual.to(u.km/u.s).value, \n",
-    "                err.value, linestyle='none', marker='.', color='k')\n",
+    "    ax.errorbar(phase, residual.to(u.m/u.s).value, data.stddev.to(u.m/u.s).value, \n",
+    "                linestyle='none', marker='o', color='k', markersize=5)\n",
+    "    ax.errorbar(phase, residual.to(u.m/u.s).value, s.to(u.m/u.s).value, \n",
+    "                linestyle='none', marker='', color='k', \n",
+    "                alpha=0.4, zorder=-10)\n",
+    "    \n",
     "    ax.set_xlabel('phase')\n",
     "    ax.set_ylabel('residual [{0:latex_inline}]'.format(u.km/u.s))\n",
     "    lim = np.abs(ax.get_ylim()).max()\n",
     "    ax.set_ylim(-lim, lim)\n",
     "    ax.axhline(0, zorder=-100, color='tab:green', alpha=0.25)\n",
+    "    ax.set_title(r'$s = ${:.0f}'.format(s.to(u.m/u.s)))\n",
     "    \n",
     "    fig.tight_layout()\n",
-    "    fig.savefig('../plots/needs-mcmc/{0}.png'.format(star.apogee_id), dpi=256)\n",
-    "    plt.close(fig)"
+    "    \n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stars with constraining data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# needs more samples\n",
+    "stars1 = session.query(AllStar).join(StarResult, JokerRun, Status)\\\n",
+    "                .filter(JokerRun.name == 'apogee-jitter')\\\n",
+    "                .filter(Status.id == 1).all()\n",
+    "\n",
+    "# needs mcmc\n",
+    "stars2 = session.query(AllStar).join(StarResult, JokerRun, Status)\\\n",
+    "                .filter(JokerRun.name == 'apogee-jitter')\\\n",
+    "                .filter(Status.id == 2).all()\n",
+    "\n",
+    "# HACK: only stars that pass Marie's cuts\n",
+    "# stars2 = session.query(AllStar).join(StarResult, JokerRun, Status)\\\n",
+    "#                 .filter(JokerRun.name == 'apogee-jitter')\\\n",
+    "#                 .filter((AllStar.logg < 3.5) & (AllStar.logg > -9999))\\\n",
+    "#                 .filter(Status.id == 2)\\\n",
+    "#                 .filter(AllStar.martig_filter).all() # only look at RGB for now\n",
+    "            \n",
+    "len(stars1), len(stars2)"
    ]
   },
   {
@@ -231,10 +315,159 @@
    },
    "outputs": [],
    "source": [
-    "from scipy.optimize import root\n",
+    "star = stars2[60]\n",
     "\n",
-    "def func(m2, f, m1):\n",
-    "    return m2**3 - f*(m1+m2)**2"
+    "for star in stars2:\n",
+    "    with h5py.File(samples_file) as f:\n",
+    "        samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
+    "\n",
+    "    # compute minimum companion mass\n",
+    "    if star.martig_filter:\n",
+    "        m2_mins = []\n",
+    "        for i in range(len(samples)):\n",
+    "            orbit = samples.get_orbit(i)\n",
+    "            res = root(m2_func, x0=10, args=(star.martig_mass, 1., orbit.m_f.value))\n",
+    "            m2_mins.append(res.x[0])\n",
+    "        m2_mins = m2_mins*u.Msun\n",
+    "        # print('m1 = {0:.3f}'.format(star.martig_mass*u.Msun))\n",
+    "        # print('m2 = {0:.3f}, {1:.2f}'.format(np.mean(m2_mins), np.mean(m2_mins).to(u.Mjup)))\n",
+    "        m1 = star.martig_mass*u.Msun\n",
+    "        m2 = np.mean(m2_mins)\n",
+    "\n",
+    "    else:\n",
+    "        m1 = None\n",
+    "        m2 = None\n",
+    "\n",
+    "    # acceleration percentile\n",
+    "    acc = acc_per[all_apogee_ids == star.apogee_id][0] * K_unit/P_unit\n",
+    "\n",
+    "    fig = make_two_panel(star, m1=m1, m2=m2, acc=acc)\n",
+    "    fig.savefig('../plots/needs-mcmc/{0}-2panel.png'.format(star.apogee_id), dpi=200)\n",
+    "    \n",
+    "    fig = make_phase_fold(star)\n",
+    "    fig.savefig('../plots/needs-mcmc/{0}-residual.png'.format(star.apogee_id), dpi=200)\n",
+    "    \n",
+    "    plt.close('all')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_m1 = u.Quantity([x.martig_mass for x in session.query(AllStar).filter(AllStar.martig_filter).all()])\n",
+    "plt.hist(all_m1.value, bins='auto');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stars with large acceleration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = ((acc_per > 1e-2) & (np.isin(all_apogee_ids, [x.apogee_id for x in stars1+stars2])))\n",
+    "sub_apogee_ids = all_apogee_ids[mask]\n",
+    "mask.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aid = sub_apogee_ids[10]\n",
+    "star = session.query(AllStar).filter(AllStar.apogee_id == aid).limit(1).one()\n",
+    "\n",
+    "with h5py.File(samples_file) as f:\n",
+    "    samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
+    "\n",
+    "_ = make_two_panel(star)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time \n",
+    "\n",
+    "mean_Ps = []\n",
+    "mean_es = []\n",
+    "loggs = []\n",
+    "used_apogee_ids = []\n",
+    "with h5py.File(samples_file) as f:\n",
+    "    for aid in sub_apogee_ids:\n",
+    "        samples = JokerSamples.from_hdf5(f[aid])\n",
+    "        star = session.query(AllStar).filter(AllStar.apogee_id == aid).limit(1).one()\n",
+    "        data = star.apogeervdata()\n",
+    "        if unimodal_P(samples, data):\n",
+    "            mean_Ps.append(np.mean(samples['P']))\n",
+    "            mean_es.append(np.mean(samples['e']))\n",
+    "            loggs.append(star.logg)\n",
+    "            used_apogee_ids.append(aid)\n",
+    "            \n",
+    "mean_Ps = u.Quantity(mean_Ps)\n",
+    "mean_es = u.Quantity(mean_es)\n",
+    "loggs = np.array(loggs)\n",
+    "used_apogee_ids = np.array(used_apogee_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(7.2, 6))\n",
+    "\n",
+    "c = ax.scatter(mean_Ps[loggs > 1.5], mean_es[loggs > 1.5], c=loggs[loggs > 1.5],\n",
+    "               marker='o', alpha=0.85, linewidth=1, s=28,\n",
+    "               edgecolor='#666666', cmap='viridis_r', vmin=1.5, vmax=3.5)\n",
+    "ax.set_xscale('log')\n",
+    "cb = fig.colorbar(c)\n",
+    "cb.set_label(r'$\\log g$')\n",
+    "\n",
+    "ax.set_xlim(0.8, 500)\n",
+    "ax.set_ylim(-0.05, 1.)\n",
+    "\n",
+    "ax.set_xlabel(r'mean $P$ [day]')\n",
+    "ax.set_ylabel(r'eccentricity $e$')\n",
+    "fig.savefig('../plots/P_e_prelim_logg.png', dpi=256)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aid = used_apogee_ids[(loggs > 1.5) & (loggs < 2.5) & (mean_Ps < 10*u.day)][2]\n",
+    "star = session.query(AllStar).filter(AllStar.apogee_id == aid).limit(1).one()\n",
+    "print(2 * (0.015 ** (1/3.*star.logg)))\n",
+    "\n",
+    "apogee_id = star.apogee_id\n",
+    "\n",
+    "with h5py.File(samples_file) as f:\n",
+    "    samples = JokerSamples.from_hdf5(f[apogee_id])\n",
+    "\n",
+    "_ = make_two_panel(star)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -920,9 +1153,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:twoface-new]",
+   "display_name": "Python [conda env:twoface]",
    "language": "python",
-   "name": "conda-env-twoface-new-py"
+   "name": "conda-env-twoface-py"
   },
   "language_info": {
    "codemirror_mode": {
